--- a/lab00/index.html
+++ b/lab00/index.html
@@ -49,7 +49,7 @@
 </div>
 
 <div>
-  <iframe src="./1.svg" width="512" height="512" seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true"> </iframe>
+  <img src="./1.svg" width="512" height="512" seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true"> </img>
 </div>
 
 <div>
