--- a/lab07/index.html
+++ b/lab07/index.html
@@ -1,14 +1,192 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>D3 Page Template</title>
+    <title>Lab 7</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@900&display=swap');
+
+        h1, div {
+          background-color: rgba(255, 255, 0, 0.1);
+          font-family: 'Noto Serif JP', serif;
+          font-size: 24pt;
+          border: solid 1px black;
+          width: 90%;
+          margin: 5px auto;
+          padding: 10px;
+        }
+
+        div {
+          font-size: 12pt;
+        }
+        
+        body {
+            background-color: rgba(255, 128, 255, 0.1);
+        }
+
+        video:hover {
+            box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+        }
+
+
+        path {
+		  stroke: #0bb;
+		  stroke-width: 1.5px;
+		  fill: none;
+		}
+
+
+
+
+    </style>
     <script src="http://d3js.org/d3.v6.min.js" charset="utf-8"></script> <!-- v6.5.0 -->
 </head>
 <body>
+
+
+
+    <h1>
+        lab07 漢字變形 Path Transitions
+    </h1>
+    <div>
+      限定使用 D3.js，參考以下影片。
+    	<ul>
+    		<li><a href="https://bocoup.com/blog/improving-d3-path-animation">Improving D3 Path Animation</a></li>
+    		<li><a href="https://bost.ocks.org/mike/path/">https://bost.ocks.org/mike/path/</a></li>
+    	</ul>
+    </div>
+
+    <div>
+  		<video width="400" controls loop autoplay>
+  		  <source src="2.mp4" type="video/mp4">
+  		</video>
+    </div>
+    <button onclick="makeAnimate()">Trigger transition</button>
+    <div>
+      展示區 (姓名)
+      <hr>
+
+		<svg id = "s0" width="256" height="256" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="-10 0 266 256">
+		</svg>
+
+		<svg id = "s1" width="256" height="256" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="-10 0 266 256">
+		</svg>
+
+		<svg id = "s2" width="256" height="256" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="-10 0 266 256">
+		</svg>
+
+    </div>
+	
+
+	<!- plugin-->
+	<script src="https://unpkg.com/d3-interpolate-path/build/d3-interpolate-path.min.js"></script>
+
     <script type="text/javascript">
       // Your beautiful D3 code will go here
+      	var showMainExample = !window.location.search.includes('showMainExample=0');
+		var delayTime = 0; // 1000
+		var duration = 8000; // 2000
+
+		var src0 = "M207 43q1 10 -5 7q-7 -2 -10 -1q-11 3 -30 4q-3 -2 0 -4q26 -3 34 -9q4 -2 2 -12q-2 -6 -15 -7q-35 -2 -79 10q-5 7 -7 11q-1 3 0 3l4 -2q9 -5 17 -8q5 -2 1 2q-12 6 -21 13q-5 3 -3 7q15 -8 40 -23q1 -1 0 -2t-3 -1q-5 0 0 -2q4 0 8 -3q6 -3 13 0q1 1 1 3q0 1 -2 1q-5 3 -19 11q-9 6 -18 11h4q12 -3 18 -6t17 -2q4 3 1 7q-32 -2 -85 21q-3 1 -1 -4q2 -3 6 -4q1 0 2 -1q2 0 6 -1q1 0 2 -1q-2 -10 4 -15q6 -4 13 -14q-9 3 -20 6q-19 7 -29 2q-6 15 9 27q3 6 -4 7q-11 -1 -14 -15q1 -15 8 -21q-1 -1 4 -1q5 1 40 -9q55 -13 94 -9q10 0 17 24zM136 57q1 2 4 4t5 3q4 3 1 5q-7 5 -7 42q5 2 25 -6q7 -2 11 -8q2 -5 11 -5q6 1 13 4q3 7 -2 7q-4 -5 -39 9q0 3 3 6q1 2 2 2l2 4q0 1 1 1q10 -5 15 -4q2 1 2 3t-2 2q-9 2 -15 6v11q8 -5 11 -2q2 1 2 3q1 2 -1 2l-4 2q-5 2 -8 3v15q19 -1 26 -3q3 -1 7 1q3 3 8 5t9 4q2 3 -1 5q-5 3 -18 -7q-7 -3 -22 -1q-30 6 -37 10q-1 10 2 23q-1 5 6 13q7 6 13 16q1 4 -4 6q-11 -2 -15 -12q-2 -5 -8 -11q1 1 -1 -2q-5 -5 0 -7q3 -2 5 -4q-2 -10 -2 -23q-9 -12 -31 -27q-4 -3 1 -2q19 6 29 14q-1 -40 1 -75q-2 3 -5 6q-12 17 -17 22q-4 4 -2 -2q1 -2 5 -8q2 -3 3 -5q-9 2 -15 9q-11 11 -25 34q-4 6 8 -1q7 -4 2 2l-7 7q-3 3 -2 8q4 4 11 5q7 2 12 11q3 8 -3 8q-8 1 -10 -4q-2 -2 -3 -5q-5 -8 -8 -13q-5 2 -6 -4q-6 -9 22 -46q-14 11 -28 24q-3 3 -5 2q-3 -2 -2 -6q4 -7 7 -9q3 -1 10 -14q4 -12 12 -23q2 -4 4 -14q0 -2 1 -2q1 -1 3 0l2 2q2 2 4 2q2 3 -1 8q-6 2 -9 8q-11 16 -18 31q21 -11 27 -18q0 -12 8 -10l10 4q5 -9 8 -16q3 -6 6 -10q2 -3 1 -14q0 -4 2 -1zM156 112q-9 3 -18 3v25q5 -1 15 -7q3 -1 6 -3q0 -12 -3 -18zM160 136q-15 6 -22 7v14q10 -2 22 -10v-11zM161 168v-14q-15 5 -22 6v8q2 6 3 5q8 -1 19 -5zM154 70q12 5 21 11q1 4 -1 5q-6 3 -11 0q-4 -1 -2 -3q0 -5 -7 -10q-2 -2 0 -3zM59 178q0 11 3 14q6 6 6 9q-1 5 -7 4q-8 -1 -9 -13q-1 -4 5 -14q2 -3 2 0zM102 130q-2 -1 -1 -3q2 -2 4 -1q6 6 13 8q3 5 -2 7q-6 -2 -9 -2q-2 1 -5 2q-3 2 -4 2q-7 3 -1 -2q1 0 6 -5q2 -3 -1 -6z";
+
+		var src1 = "M118 11q3 -3 6 0q1 2 5 1q1 1 6 2h3q2 3 0 4q-11 0 -27 4q-11 2 -24 12q-5 3 -6 3q-1 -1 3 -5q2 -2 2 -3t-3 -1q-15 3 -29 -2q-4 -1 1 -2q27 1 52 -7q8 -1 11 -6zM102 33q-2 -2 1 -1q5 3 9 5q2 1 2 2t-1 2q-3 1 -2 5q-3 10 -2 44q3 -3 5 -6q4 -2 2 2q-5 7 -8 10v27q0 9 1 12q32 -6 37 -14q4 -5 11 -3q1 2 4 3h3q3 0 7 2h2q1 2 0 4q-2 2 -4 1q-8 -2 -20 1t-36 11q-9 5 -32 1q-2 0 -2 -2q1 -1 3 -1q12 1 21 -2q-8 -9 -5 -18q0 -3 1 -3l2 2q2 3 3 3t1 -3v-17q-23 22 -40 38q-3 3 -4 2q-1 0 -2 -4q-3 -6 4 -6q1 6 42 -37v-46q-1 -8 -3 -14zM196 56q0 1 2 2q7 4 11 7q2 6 -3 6q-11 -1 -26 15q4 0 13 3q2 3 -1 4q-11 0 -29 3h-5q0 4 -4 5q-10 1 -17 -4q-3 -7 0 -11q4 -1 1 -7q-1 0 -6 -15q0 -1 1 -2q1 0 2 1q1 2 3 5q1 2 2 2q4 0 15 -3q12 -3 21 -5q6 1 10 -5q3 -5 10 -1zM182 63q-16 6 -41 9q1 3 3 6q2 5 4 6q2 7 10 9l12 -6q10 -10 16 -19q0 -5 -4 -5zM71 44q5 -4 1 2q-20 20 -13 25q4 24 6 29q12 -6 16 -13q1 -3 5 -3q4 -1 8 -1q3 1 1 2q-8 2 -17 21q-4 5 -1 -1q0 -1 1 -3q0 -2 1 -5q-1 -3 -2 -2l-2 2q-5 4 -10 5q1 12 6 15q1 4 -1 4q-10 -5 -14 -10q-2 -4 1 -6q2 -1 4 -4q-1 -2 -1 -5q-3 -15 -8 -24q-2 -3 1 -8q4 -7 18 -20zM91 59q2 0 3 1q0 1 -1 2q-8 8 -14 15q-4 5 -2 -1q3 -8 -1 -6q-1 2 -11 6q-3 1 0 -2q10 -6 14 -9q1 -3 12 -6zM118 145q6 4 14 5q6 -1 5 7q17 -1 24 2q0 3 -3 4q-10 -2 -22 3q0 16 -4 26q37 -2 54 -2q8 -8 14 -4q21 13 31 19q2 4 -3 6q-4 0 -11 -6q-14 -10 -32 -11q-66 -2 -133 13q-15 4 -22 3q-3 -1 -3 -2t3 -1q49 -8 93 -14q-4 -5 -3 -9q1 -5 1 -14l-10 4q-7 3 -16 1q-2 0 -2 -1t3 -2q9 -2 15 -5q5 -1 10 -3q2 -11 -5 -17q-4 -3 2 -2z";
+
+		var src2 = "M133 121l6 3q2 1 4 1q2 1 2 3t-2 2q-8 4 -19 15q6 -2 19 -4l6 -2l-2 -8q-3 -2 1 -1q4 3 8 8q19 -2 36 -1q10 2 20 14q4 5 1 7q-3 3 -3 7q-4 27 -22 39q-5 2 -9 0q-8 -6 -17 -15q-4 -5 1 -1q14 10 21 11q20 -9 21 -46q-2 -7 -12 -12q-17 -2 -38 1q-2 29 -3 61q0 7 3 10q3 2 5 7q0 1 -3 3q-3 0 -5 -5q-3 -7 -8 -11q-1 -3 3 -4q3 0 3 -4v-20v-36q-14 2 -26 6v3q0 7 3 12q1 2 3 15q-2 5 -5 1q-3 -5 -2 -13q-1 -10 -3 -17l-6 2q-3 2 -1 -2q5 -3 6 -3q5 -6 10 -14q1 -1 3 -4q3 -4 -1 -7q-2 -2 2 -1zM104 159q-2 2 0 6t1 8q-2 2 -1 3q0 1 1 3q4 9 7 11q0 3 -1 4q-2 1 -3 -1q-11 -9 -8 -14q1 -8 0 -15q-1 -4 3 -6q2 0 1 1zM156 9q1 -5 17 3q4 5 -2 7q-6 -2 -12 -1q-5 1 -21 6q6 4 9 13q39 -8 64 1q8 3 14 22q0 4 -1 5q-2 1 -4 -1q-1 -1 -5 0q-7 3 -17 4q-9 1 -14 0q-3 0 0 -2q16 -3 29 -9q8 -5 -2 -14q-23 -9 -64 -1			q-1 2 -2 8q0 8 -1 14q14 -5 20 -13q5 -4 2 -4q-2 -1 1 -2q2 0 5 3h2q1 2 -1 5q-4 2 -9 5q-4 2 -7 3q-8 4 -13 5q-2 24 -2 39q3 0 12 -2q5 -2 8 -3q4 -7 8 -7q7 2 16 8q2 3 -2 2q-11 -1 -31 7l-6 2q-3 2 -5 2q-3 1 0 -2h2q2 -1 3 -2q2 -2 0 -2q-27 11 -31 10q-6 0 -10 -2q-3 -1 1 -2q2 1 7 0q4 0 12 -3h3q5 -2 9 -4q-1 -6 -3 -12l-1 -1q0 -1 3 -3q1 -6 1 -12q-6 5 -16 16q-5 6 -7 8q-4 5 -5 2q-2 -2 -1 -12q0 -4 2 -1t4 1q5 -3 18 -14q3 -2 5 -4v-10q1 -13 1 -20q-10 3 -22 9q-4 2 -11 0q-3 0 -3 -1q-1 -1 2 -2l18 -6q9 -3 15 -6q0 -10 -1 -12q-2 -2 0 -3q-2 0 -4 1q-9 0 -14 -2q-3 0 -3 -1q1 -1 4 -2q10 0 29 -6q6 -2 7 -5zM120 64q4 -2 12 -1q3 4 -2 6q-3 1 -7 3q-1 1 -2 1q-3 2 -4 2l1 -3q2 -2 -8 -4q-2 0 0 -1q5 0 10 -3zM99 58h-1q-3 11 0 20q1 6 1 8q-4 4 -6 1q-5 -7 -4 -17q-1 -4 2 -4q2 2 6 -8q2 -2 2 0z			M178 80q3 9 -4 8q-6 -3 -9 -3q-3 2 -2 -2q2 -4 -12 -8q-2 0 -2 -1t2 -2q14 3 27 8zM74 20q2 4 7 8q1 1 2 1q3 3 3 4t-4 3q-6 3 -10 20q-6 18 -8 61q-2 42 2 70v4t2 3q6 8 15 15q0 5 -5 5q-8 -10 -24 -16q-6 -3 -3 -9q2 -1 8 -2q4 3 4 -6q-1 -7 -1 -20q-2 -47 2 -102q-31 50 -50 66q-8 6 -2 -2q24 -29 55 -86q5 -10 5 -15q-2 -7 2 -2z"
+
+		var src = [];
+
+		src.push(src0);
+		src.push(src1);
+		src.push(src2);
+
+
+		makeAnimate()
+
+		function makeAnimate() {
+
+			var p = d3.selectAll('path');
+			p.remove();
+
+			for( var indexOfname = 0; indexOfname < 3; indexOfname++) {
+
+				var lines = src[indexOfname];
+				var line = lines.split("z")
+
+				strings = [];
+
+				var curX = 248;
+				var curY = 128;
+
+				var x;
+				var y;
+
+				var divide = line.length - 1;
+
+				var degree = 360 / divide;
+				for (var i = 0; i < divide; i++ ) {
+					var str = "M" + curX + " " + curY + " ";
+					for( var deg = degree * i; deg < degree *(i + 1); deg++) {
+
+						x = 128 + 120 * Math.cos(deg * Math.PI / 180)
+						y = 128 + 120 * Math.sin(deg * Math.PI / 180)
+						str += "L" + x + " " + y + " "
+
+					}
+
+
+
+					curX = x;
+					curY = y;
+					strings.push(str);
+				}
+
+				for( var i = 0; i < divide; i++ ) {
+
+					 d3.select('#s' + indexOfname)
+				    .append('path')
+				    .attr("id", "path-container" + i)
+				    .attr("d", strings[i])
+					.transition()
+					.duration(2000)
+					  .attrTween("d", pathTween(line[i], 4))
+					.transition()
+					  .attrTween("d", pathTween(strings[i], 4))
+					.transition()
+						  
+				}
+			}
+
+		}
+
+
+
+
+		function pathTween(d1, precision) {
+		  return function() {
+		    var path0 = this,
+		        path1 = path0.cloneNode(),
+		        n0 = path0.getTotalLength(),
+		        n1 = (path1.setAttribute("d", d1), path1).getTotalLength();
+
+		    // Uniform sampling of distance based on specified precision.
+		    var distances = [0], i = 0, dt = precision / Math.max(n0, n1);
+		    while ((i += dt) < 1) distances.push(i);
+		    distances.push(1);
+
+		    // Compute point-interpolators at each distance.
+		    var points = distances.map(function(t) {
+		      var p0 = path0.getPointAtLength(t * n0),
+		          p1 = path1.getPointAtLength(t * n1);
+		      return d3.interpolate([p0.x, p0.y], [p1.x, p1.y]);
+		    });
+
+		    return function(t) {
+		      return t < 1 ? "M" + points.map(function(p) { return p(t); }).join("L") : d1;
+		    };
+		  };
+		}
+
+
     </script>
-  </body>
-</html>
+  </html>
   
