--- a/lab07/index.html
+++ b/lab07/index.html
@@ -39,7 +39,7 @@
 
 
     </style>
-    <script src="http://d3js.org/d3.v6.min.js" charset="utf-8"></script> <!-- v6.5.0 -->
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 </head>
 <body>
 
