--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
     <iframe src="./lab07/index.html" width="100%" height="700" seamless="seamless" scrolling="yes" frameborder="0" allowtransparency="true"> </iframe>
 </div>
 
+<h3> lab 08: </h3>
+<div>
+    <iframe src="./lab08/index.html" width="100%" height="700" seamless="seamless" scrolling="yes" frameborder="0" allowtransparency="true"> </iframe>
+</div>
+
 
 <h3> lab 09: </h3>
 <div>
