fix media can't load

--- a/lab66/index.html
+++ b/lab66/index.html
@@ -114,7 +114,7 @@
 					.enter()
 					.append("img")
 					//.attr("src", function(d){ return "media/" + d + ".png"})
-					.attr("src","media/view.png")
+					.attr("src","media/view.PNG")
                     .style('height', '350px')
                     .style('width', '600px')
                 ;
